fixed issues with overlapping content in Danceability route. Div is 100vh now.

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -442,9 +442,8 @@ a {
   align-items: center;
   flex-wrap: wrap;
   width: 100vw;
-  height: 30vh;
-  max-height: 30vh;
-  min-height: 30vh;
+  height: 100vh;
+  min-height: 100vh;
 }
 
 .Browse-Danceability h1{
@@ -456,10 +455,6 @@ a {
 }
 
 .Browse-Danceability-Placeholder {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
   width: 100vw;
   height: 70vh;
   max-height: 70vh;
